UltraWide vehicle UI alignment fixed

--- a/html/responsive.css
+++ b/html/responsive.css
@@ -97,7 +97,7 @@
 
 @media (width: 3440px) and (height: 1440px) {
   .responsive {
-    margin-left: 65vh!important;
+    margin-left: 33vh!important;
     transform: scale(1.3, 1.3);
     bottom: 7.6vh!important;
   }
@@ -131,12 +131,12 @@
     font-size: 0.7vh!important;
   }
   .square {
-    left: 33.9vh!important;
+    left: 2.3vh!important;
     bottom: 6.1%!important;
 	  width: 29.3vh!important;
   }
   .circle {
-    left: 35vh!important;
+    left: 3.5vh!important;
 	  width: 27.6vh!important;
 	  bottom: 6.9%!important;
   }
@@ -178,11 +178,11 @@
     font-size: 0.7vh!important;
   }
   .square {
-    left: 2.5vh!important;
+    left: 2.3vh!important;
     bottom: 6%!important;
   }
   .circle {
-    left: 3.4vh!important;
+    left: 3.5vh!important;
 	  width: 27.6vh!important;
 	  bottom: 6.7%!important;
   }
